--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -609,7 +609,7 @@ The [http://code.google.com/p/v8-juice/source/browse/#svn/convert/addons addons 
 
   * The `ConvertDemo.?pp` and `test.js` files in this source tree's root directory give a very thorough demonstration, showing off just about every feature the library offers.
   * A [V8Convert_ByteArray ByteArray class] for handling binary data in JS space.
-  * A [JSPDO database access abstraction API].
+  * The [JSPDO] database access abstraction API.
   * A basic [V8Convert_Socket socket API].
 
 Each of the "addons" includes a basic v8 shell app which includes the JS bindings provided by that addon, making it simple to try out the code before including it into one's own project (on many Unix-like platforms, at least).
