Edited wiki page V8Convert through web user interface.

--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -7,9 +7,9 @@
 
 Source code: [http://code.google.com/p/v8-juice/source/browse/#svn/convert] (see [http://code.google.com/p/v8-juice/source/checkout this link] for checkout instructions.)
 
-The `v8::convert` API is a spin-off of the core-most components of the v8-juice library. It has a templates-heavy, header-only implementation and has no 3rd-party dependencies beyond the STL and whatever v8 needs. While i have personally always rather liked (and been well served by) the underlying architecture v8-juice uses for type conversions, as of June 2011 i will go so far to say that i personally consider v8-convert to be the most comprehensive, most powerful, and easiest to use type-conversion API available for v8.
+The `v8::convert` API is a spin-off of the core-most components of the [HomePage v8-juice library]. It has a templates-heavy, header-only implementation and has no 3rd-party dependencies beyond the STL and whatever v8 needs. While i have personally always rather liked (and been well served by) the underlying architecture v8-juice uses for type conversions, as of June 2011 i will go so far to say that i personally consider v8-convert to be the most comprehensive, most powerful, and easiest to use type-conversion API available for v8.
 
-v8-convert can be used in conjunction with other v8 libraries like [https://github.com/tsa/vu8 vu8] and [http://www.nodejs.org/ nodejs]. This code originated as the core-most component of the [HomePage v8-juice library]. After a couple years i felt compelled to refactor it into a toolkit usable by arbitrary v8-using clients, doing a bit of cleanup along the way. The eventual intention is that this code will replace the `v8::juice::convert` API.
+v8-convert is not a "mutually exclusive solution" to its problem domain, and it can easily be used in conjunction with other v8 client libraries like [https://github.com/tsa/vu8 vu8] and [http://www.nodejs.org/ nodejs].
 
 It's main features/focus are:
 
@@ -19,7 +19,7 @@ It's main features/focus are:
 
 The first two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so. They also give us everything we need to implement generic class-binding mechanisms like [V8Convert_ClassCreator]. The last feature is really just "sugar" (but also quite convenient at times).
 
-While these features are easily summed up in a short list, their broader implications are quite large. The ability to convert functions from one signature to another (at compile time, by the way) has proven to be deceptively powerful, allowing users to bind new functions to v8 with unprecedented ease. We can combine this with template meta-programming techniques to do weird things like combine multiple native functions into a single `InvocationCallback` function which dispatches to the proper native function based on the number of arguments (see the examples of argument overload later on down this page). We have [http://code.google.com/p/v8-juice/source/browse/convert/ConvertDemo.cpp?spec=svn1744&r=1730 proof-of-concept code showing] _compile-time-generated_ overloads being dispatched based on the _runtime-provided_ argument _types_ as well as their counts (search that link for `bogo_callback`).
+While these features are easily summed up in a short list, their broader implications are quite large. The ability to convert functions from one signature to another (at compile time, by the way) has proven to be deceptively powerful, allowing users to bind new functions to v8 with unprecedented e. We can combine this with template meta-programming techniques to do weird things like combine multiple native functions into a single `InvocationCallback` function which dispatches to the proper native function based on the number of arguments (see the examples of argument overload later on down this page). We have [http://code.google.com/p/v8-juice/source/browse/convert/ConvertDemo.cpp?spec=svn1744&r=1730 proof-of-concept code showing] _compile-time-generated_ overloads being dispatched based on the _runtime-provided_ argument _types_ as well as their counts (search that link for `bogo_callback`).
 
 For cases where the "automatic" function-to-!InvocationCallback conversions are not possible or not suitable, the type-conversion API can still simplify the implementation of custom `v8::InvocationCallback` functions.
 
