Edited wiki page V8Convert through web user interface.

--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -17,7 +17,7 @@ It's main features/focus are:
   * Converting free- and member functions into `v8::InvocationCallback` functions. These generated functions convert the !JavaScript-originated function arguments into native counterparts, forward the data to the original native function, and convert the return values back to something JS can use. (The `void` return type is translated to the `undefined` JS value.)
   * Binding JS object properties to native shared or member properties or accessor/mutator functions/methods.
 
-The first two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so. They also give us everything we need to implement generic class-binding mechanisms like [V8Convert_ClassCreator]. The last feature is really just "sugar" (but also quite convenient at times).
+The first two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so. The last feature is really just "sugar" (but also quite convenient at times). When combined, they give us everything we need to implement generic C++/JS class-binding mechanisms like [V8Convert_ClassCreator]. 
 
 While these features are easily summed up in a short list, their broader implications are quite large. The ability to convert functions from one signature to another (at compile time, by the way) has proven to be deceptively powerful, allowing users to bind new functions to v8 with unprecedented e. We can combine this with template meta-programming techniques to do weird things like combine multiple native functions into a single `InvocationCallback` function which dispatches to the proper native function based on the number of arguments (see the examples of argument overload later on down this page). We have [http://code.google.com/p/v8-juice/source/browse/convert/ConvertDemo.cpp?spec=svn1744&r=1730 proof-of-concept code showing] _compile-time-generated_ overloads being dispatched based on the _runtime-provided_ argument _types_ as well as their counts (search that link for `bogo_callback`).
 
